HTM-1977: Implement GeoPackage export using low-level API, which seems more robust
Add --enable-native-access=ALL-UNNAMED for the native sqlite/geopackage driver